# open-pages.mokareads.org

./: .gitignore  CNAME  README-WASM.md  README.md  THEMES.md  build-wasm.sh  build.js  build.sh  copy-assets.sh  diagnose.js  fallback-test.html  index.html  manager.py  package-lock.json  package.json  papers.json  script.js  simple-index.html  simple-test.html  style.css  test-wasm.sh  theme-default.css  theme-moka.css  update-papers.sh
.github/workflows/: deploy.yml
dist-wasm/: debug-test.html  fallback-test.html  index-backup.html  index.html  no-wasm.html  simple-test.html  simple-working-version.html  sources.tar  test-debug.html
papers/: example-paper.md  papers-list.json  strategic-pricing.md
src/css/: style.css  theme-moka.css
src/js/: main.js  papers.js
tools/: build-concept.md
tools/web-processor/: Cargo.toml  build.sh
tools/web-processor/src/: lib.rs
